fix scroll on mobile

--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body.dark {
 .everything {
   width: 100%;
   height: 100%;
+  overflow: auto;
+}
+
+.everything:after {
+  content: '';
+  clear: both;
 }
 
 article {
